# guac

./: .gitignore  01_data_prep.py  02_difficulty_judge.py  03_grpo_train.py  04_evaluate.py  CLAUDE.md  HANDOFF.md  README.md  accelerate_config.yaml  accelerate_config_grpo.yaml  judge_chartqa.py  poc_results.json  process_chartqa.py  pyproject.toml
conf/: config.yaml
conf/data/: default.yaml
conf/evaluation/: default.yaml
conf/judge/: vllm.yaml
conf/model/: qwen2_vl_7b.yaml
conf/training/: grpo.yaml  grpo_trl.yaml  reinforce.yaml
run/: 00_smoke_test.sh  00_smoke_test_ddp.sh  01_prepare_data.sh  02_judge_difficulty.sh  02_judge_difficulty_ddp.sh  03_train_baseline.sh  03_train_baseline_ddp.sh  03_train_gaussian.sh  03_train_gaussian_ddp.sh  03_train_grpo_vllm.sh  03_train_reinforce.sh  03_train_reinforce_ddp.sh  04_evaluate.sh  start_vllm_server.sh
scripts/: evaluate.py  infer.py  judge_difficulty.py  merge_judge_shards.py  plot_difficulty_dist.py  prepare_data.py  train.py  train_grpo.py
src/guac/data/: prep.py  utils.py
src/guac/data_preprocessing/: prep.py  utils.py
src/guac/evaluation/: evaluator.py
src/guac/judge/: difficulty.py
src/guac/training/: __init__.py  curriculum.py  grpo_trainer.py  reinforce_trainer.py  rewards.py  trainer.py
tests/: conftest.py  test_ddp_cpu.py  test_difficulty.py  test_evaluation.py  test_training_smoke.py
tests/fixtures/smoke/: train.jsonl
